# afroeval

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  afroeval-concierge-engagement-playbook.archive.md  afroeval-concierge-operations-playbook.md  afroeval-messaging-playbook.md  agentifyafro-brand-guidelines.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-migrate.yml
.streamlit/: config.toml
ail/: __init__.py  code_switching.py  cultural_appropriateness.py  hallucination_probes.py  informal_economy.archive.py  informal_economy.py
api/: main.py  settings.py
api/middleware/: auth.py
api/v1/routes/: assessments.py  health.py  runs.py  scorecards.py
auth/: __init__.py  client.py
benchmarks/: __init__.py  ids.py  loader.py
benchmarks/packs/: agriculture_ha_v1.0.0.jsonl  agriculture_om_v1.0.0.jsonl  code_switching_mixed_v1.0.0.jsonl  community_health_am_v1.0.0.jsonl  community_health_am_v1.1.0.jsonl  cross_border_trade_ha_v1.0.0.jsonl  customer_service_en_v1.0.0.jsonl  customer_service_yo_v1.0.0.jsonl  mobile_money_sw_v1.0.0.jsonl  public_services_zu_v1.0.0.jsonl  remittance_so_v1.0.0.jsonl  safety_mixed_v1.0.0.jsonl  urban_digital_sheng_v1.0.0.jsonl
console/: access.py  app.py
db/: models.py  session.py
db/migrations/: README  env.py
db/migrations/versions/: 001_initial_schema.py  9cb5227a017d_add_response_reviews_table.py  b7e2f4a19c3d_add_run_archived.py  c7d8e9f0a1b2_add_scorecard_african_fabrication_detected.py  d1e2f3a4b5c6_add_item_validations.py  dda5b8820ce4_enable_rls_public_tables.py  e4f5a6b7c8d9_add_scorecard_safety_unverified.py
docs/: BENCHMARK_ITEM_SCHEMA.md  CULTURAL_RUBRIC_V1.md  DECISIONS.md  ENGINEERING_BIBLE_V1.html  GOLD_TASK_DESIGN.md  LINGUIST_ONBOARDING.md  METHODOLOGY_V1.md  SME_ANNOTATION_GUIDE.md  SME_ROLE_PACKS.md  SME_WORK_PACKAGE_2026-07.md
docs/superpowers/plans/: 2026-06-25-rls-fix.md  2026-06-25-two-tier-auth.md  2026-06-28-code-switching-evaluator.md  2026-06-28-cultural-appropriateness-evaluator.md  2026-06-29-bias-fairness-evaluator.md  2026-06-29-hallucination-probe-expansion.md  2026-06-29-inspection-anomaly-fixes.md  2026-06-29-safety-robustness-evaluator.md  2026-07-17-methodology-v1.2-hallucination-scoring.md  2026-07-18-methodology-v1.4-bias-fairness-grouping.md  2026-07-19-validation-path-core-loop.md
docs/superpowers/specs/: 2026-06-25-rls-fix-design.md  2026-06-25-two-tier-auth-design.md  2026-06-28-code-switching-evaluator-design.md  2026-06-28-cultural-appropriateness-evaluator-design.md  2026-06-29-bias-fairness-evaluator-design.md  2026-06-29-hallucination-probe-expansion-design.md  2026-06-29-safety-robustness-evaluator-design.md  2026-07-17-methodology-v1.2-hallucination-scoring-design.md  2026-07-18-methodology-v1.4-bias-fairness-grouping-design.md  2026-07-19-item-validation-path-design.md
evaluators/: __init__.py  base.py  bias_fairness.py  hallucination.py  language_performance.py  llm_judge.py  safety.py
hitl/: __init__.py  client.py  label_config.py
ingestion/: __init__.py  anthropic_connector.py  azure_openai_connector.py  base.py  gemini_connector.py  jsonl_connector.py  openai_connector.py
orchestration/: __init__.py  dispatcher.py
reporting/: __init__.py  generator.py
scoring/: __init__.py  engine.py
scripts/: _run_full_pipeline.py  _validate_packs.py  create_authoring_project.py  generate_bias_report.js  hitl_export_tasks.py  hitl_import_reviews.py  import_authored_items.py  run_and_export.py  run_eval.py  run_scorecard.py  seed_benchmarks.py  seed_packs_to_db.py  validation_adjudicate.py  validation_export_tasks.py  validation_import_ratings.py  validation_writeback.py  verify_loader.py  verify_rls_fix.py
scripts/data/: _authoring_plan.json  _gen_batch_1.jsonl  _gen_batch_2.jsonl  _gen_batch_3.jsonl  _gen_batch_4.jsonl  _gen_batch_5.jsonl  authoring_candidates_draft.jsonl  authoring_candidates_v2.jsonl  validator_roster.json
tests/: conftest.py  test_api.py  test_auth_client.py  test_bias_fairness.py  test_code_switching.py  test_console_access.py  test_cultural_appropriateness.py  test_hallucination_probes.py  test_label_config.py  test_language_performance.py  test_loader.py  test_methodology.py  test_reporting.py  test_safety_evaluators.py  test_scoring.py  test_seed_guard.py  test_sprint1.py  test_validation_adjudicate.py  test_validation_assignment.py  test_validation_hashing.py  test_validation_identity.py  test_validation_irr.py  test_validation_writeback.py
validation/: assignment.py  hashing.py  identity.py  irr.py
