[project]
name = "afroeval"
version = "0.1.0"
description = "AfroEval Scorecard™ — Africa-first AI evaluation platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary — AgentifyAfro.ai" }
authors = [{ name = "AgentifyAfro.ai", email = "daniel.haile@agentifyafro.ai" }]

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Data validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # Database
    "sqlmodel>=0.0.19",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",

    # Evaluation — open-source base metrics
    # deepeval and ragas are optional heavy deps (pulled via [project.optional-dependencies] eval).
    # On Streamlit Cloud they are intentionally absent; evaluators fall back to stub scores.
    "fairlearn>=0.10.0",

    # Data science
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",

    # Model connectors
    "openai>=1.35.0",
    "httpx>=0.27.0",

    # Operator console
    "streamlit>=1.36.0",
    "supabase>=2.0.0",

    # Reporting (ADR-004: WeasyPrint was the original plan but requires native GTK
    # libs unavailable on Windows; reportlab is the documented fallback)
    "reportlab>=4.0.0",
    "jinja2>=3.1.4",

    # Observability
    "structlog>=24.2.0",
]

[project.optional-dependencies]
eval = [
    "deepeval>=1.4.0",
    "ragas>=0.1.9",
    "sentence-transformers>=2.0.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
]

[project.scripts]
afroeval-api = "api.main:start"
afroeval-console = "console.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "api",
    "auth",
    "ingestion",
    "orchestration",
    "evaluators",
    "ail",
    "scoring",
    "benchmarks",
    "reporting",
    "console",
    "hitl",
    "db",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = [
    "api", "ingestion", "orchestration", "evaluators",
    "ail", "scoring", "benchmarks", "reporting", "console", "hitl", "db",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
